fix: overflow with long comments.

--- a/app/assets/stylesheets/comment.css.sass
+++ b/app/assets/stylesheets/comment.css.sass
@@ -32,6 +32,7 @@
     border-top: 1px solid #DDD
     padding-left: 15px
     position: relative
+    word-wrap: break-word
 
   pre
     font-size: 0.9em
