--- a/app/assets/stylesheets/common.css.sass
+++ b/app/assets/stylesheets/common.css.sass
@@ -58,8 +58,9 @@ pre//
   color: #393939
   font-family: menlo, monospace, serif
   font-size: 1.2em
-  overflow: scroll
+  overflow: auto
   padding: 10px 10px
+  white-space: pre
 
 textarea
   resize: vertical
